--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,488 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: minmax(300px, auto) 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+        'aside header'
+        'aside main'
+        'footer footer';
+    height: 100vh;
+}
+
+aside,
+header,
+footer {
+    background-color: #fefcf6;
+    border: 1px solid #edebe5;
+}
+
+.container {
+    padding: 16px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    grid-area: header;
+}
+
+header .add-task {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    padding-right: 4px;
+    background-color: #d74b00;
+    border: 1px solid rgb(175 56 1);
+    border-radius: 3px;
+    color: #fff;
+    cursor: pointer;
+}
+
+header .add-task:hover {
+    background-color: #d73900;
+}
+
+header .add-task:active {
+    background-color: #e53d00;
+}
+
+header h3 {
+    font-weight: normal;
+}
+
+header .info {
+    display: flex;
+    justify-content: space-between;
+}
+
+header .tasks-status {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.tasks-status .status {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+main {
+    background-color: #fff;
+    grid-area: main;
+}
+
+.tasks-sort {
+    display: flex;
+    gap: 18px;
+}
+
+.projects-header button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgb(188 188 188);
+    background-color: #fff;
+    border-radius: 3px;
+    padding: 2px 6px;
+    cursor: pointer;
+}
+
+.tasks-sort button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    background-color: #fff;
+    border: 1px solid rgb(219 219 219);
+    border-radius: 3px;
+    padding: 6px 10px;
+    min-width: 40px;
+    cursor: pointer;
+}
+
+.tasks img {
+    height: 4rem;
+}
+
+.project img {
+    height: 1.3rem;
+}
+
+.due-date img {
+    height: 0.8rem;
+}
+
+.tasks-sort button img {
+    height: 1rem;
+}
+
+.popup button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-top: 16px;
+    padding: 6px;
+    background-color: #d74b00;
+    border: 1px solid rgb(175 56 1);
+    border-radius: 3px;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.task-edit button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border: 1px solid rgb(219 219 219);
+    border-radius: 3px;
+    padding: 4px 6px;
+    min-width: 40px;
+    height: 1.5rem;
+    cursor: pointer;
+}
+
+.tasks-sort button:hover {
+    background-color: #d73900;
+    color: #fff;
+}
+
+.tasks-sort button:active {
+    background-color: #e53d00;
+    color: #fff;
+}
+
+.tasks {
+    margin-top: 16px;
+    background-color: rgb(255 235 203);
+    border: 1px solid rgb(234 216 186);
+    border-radius: 4px;
+    box-shadow: 0 0 12px rgb(0 0 0 / 30.1%);
+}
+
+.no-tasks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer h3 {
+    font-weight: 300;
+}
+
+.no-tasks h3,
+.no-tasks h4 {
+    margin-top: 8px;
+    font-weight: normal;
+}
+
+.task-container {
+    display: flex;
+    align-items: baseline;
+    gap: 16px;
+}
+
+.task-container input {
+    width: 1rem;
+    height: 1rem;
+}
+
+.task {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.task-info {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.task-info h3 {
+    font-weight: 500;
+}
+
+.task-info h4,
+.task-info h5 {
+    font-weight: 400;
+}
+
+.task-additional {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.task-additional h4 {
+    font-weight: 400;
+    font-size: 0.8rem;
+}
+
+.task-priority,
+.due-date {
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: 2px 4px;
+}
+
+.due-date {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    background-color: #fefcf6;
+    border: 1px solid #cdcdcd;
+}
+
+.task-priority.high {
+    border: 1px solid rgb(224 46 1);
+    background-color: rgb(239 48 0);
+    color: #fff;
+}
+
+.task-priority.medium {
+    border: 1px solid rgb(224 46 1);
+    background-color: rgb(177 36 1 / 70.7%);
+    color: #fff;
+}
+
+.task-priority.low {
+    border: 1px solid rgb(0 73 146 / 98.1%);
+    background-color: rgb(1 89 177 / 98.1%);
+    color: #fff;
+}
+
+.task-edit {
+    display: flex;
+    gap: 4px;
+}
+
+.task-edit button:hover {
+    background-color: #d73900;
+    color: #fff;
+}
+
+.task-edit button:active {
+    background-color: #e53d00;
+    color: #fff;
+}
+
+button.edit-btn {
+    background: none;
+    border: none;
+    min-width: auto;
+}
+
+.edit-btn img {
+    height: 1.3rem;
+}
+
+aside {
+    grid-area: aside;
+}
+
+.projects-header input {
+    width: 100%;
+    padding: 4px;
+    border: 1px solid rgb(188 188 188);
+    border-radius: 3px;
+    outline: none;
+}
+
+.form-container input,
+.form-container select {
+    border: 1px solid rgb(188 188 188);
+    border-radius: 4px;
+    height: 30px;
+    padding: 4px;
+    outline: none;
+}
+
+.form-container input:focus,
+.form-container select:focus {
+    box-shadow: 0 0 8px rgb(215 69 1);
+    border: 1px solid rgb(215 69 1);
+}
+
+.form-container input:invalid,
+.form-container select:invalid {
+    border: 1px solid rgb(255 72 0);
+}
+
+.projects-header .container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    border-bottom: 1px solid #edebe5;
+}
+
+.projects-header form {
+    display: flex;
+    gap: 12px;
+}
+
+.projects-header input:focus {
+    box-shadow: 0 0 8px rgb(215 69 1);
+    border: 1px solid rgb(215 69 1);
+}
+
+.projects-header input:invalid {
+    border: 1px solid rgb(255 72 0);
+}
+
+.projects-header button:hover {
+    background-color: #d74b00;
+    border: 1px solid rgb(175 56 1);
+}
+
+.projects-header button:active {
+    background-color: #e53d00;
+    border: 1px solid rgb(175 56 1);
+}
+
+.project {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    background-color: rgb(71 71 71);
+    border: 1px solid rgb(0 0 0);
+    border-radius: 4px;
+    padding: 4px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.project h4 {
+    font-weight: 400;
+}
+
+.project h3 {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.project:hover {
+    background-color: rgb(56 56 56);
+}
+
+.project:active {
+    background-color: rgb(82 82 82);
+}
+
+.project-count {
+    background-color: rgb(245 78 0);
+    padding: 0 6px;
+    border: 1px solid rgb(190 61 2);
+    border-radius: 4px;
+    margin-left: auto;
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+footer {
+    grid-area: footer;
+    text-align: center;
+}
+
+.project.current {
+    border: 1px solid #9f5302;
+    background-color: #c66600;
+}
+
+.project.current:hover {
+    border: 1px solid #9f5302;
+    background-color: #af5b01;
+}
+
+button.current {
+    border: 1px solid #9f5302;
+    background-color: #c66600;
+    color: #fff;
+}
+
+dialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: rgb(0 0 0 / 43.3%);
+    border: none;
+}
+
+.overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.popup {
+    background-color: #fff;
+    border: 1px solid #6c6c6c;
+    border-radius: 4px;
+    box-shadow: 0 0 4px rgb(103 103 103);
+    min-width: 450px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    margin-top: 8px;
+    color: #252525;
+}
+
+.form-container textarea {
+    border: 1px solid rgb(188 188 188);
+    border-radius: 4px;
+    height: 60px;
+    padding: 4px;
+    outline: none;
+}
+
+.form-container textarea:focus {
+    box-shadow: 0 0 8px rgb(215 69 1);
+    border: 1px solid rgb(215 69 1);
+}
+
+.form-container textarea:invalid {
+    border: 1px solid rgb(255 72 0);
+}
+
+.form-container.options {
+    flex-direction: row;
+    gap: 16px;
+}
+
+.form-container.options > .form-container {
+    width: 100%;
+}
+
+.form-container label[for='title']::after {
+    content: ' *';
+}
+
+.popup button:hover {
+    background-color: #d73900;
+}
+
+.popup button:active {
+    background-color: #e53d00;
 }
